--- a/Chip8Emu/Chip8Emu.csproj
+++ b/Chip8Emu/Chip8Emu.csproj
@@ -1,15 +1,13 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk.WindowsDesktop">
 
     <PropertyGroup>
-        <OutputType>WinExe</OutputType>
+        <OutputType>Exe</OutputType>
         <TargetFramework>netcoreapp3.1</TargetFramework>
         <UseWPF>true</UseWPF>
     </PropertyGroup>
 
     <ItemGroup>
-      <PackageReference Include="SDL2-CS" Version="2.0.0" />
-      <PackageReference Include="SkiaSharp" Version="2.80.1" />
-      <PackageReference Include="System.Drawing.Common" Version="4.7.0" />
+      <PackageReference Include="SFML.Net" Version="2.5.0" />
     </ItemGroup>
 
     <ItemGroup>
